--- a/Book.bib
+++ b/Book.bib
@@ -8,9 +8,33 @@
 	month = apr,
 	year = {2012},
     url = {https://policy.defense.gov/Portals/11/Documents/MA_Strategy_Final_7May12.pdf},
-    note = {(Accessed on 22 Dec. 2025)},
-	file = {PDF:C\:\\Users\\skchi\\Zotero\\storage\\KBAKCYME\\Department of Defense Mission Assurance Strategy.pdf:application/pdf},
+    note = {(Accessed on 22 Dec. 2025)}
 }
+
+
+@mastersthesis{young-thesis,
+  author  = "Young, William E.",
+  title   = "{JFACC} as {A}rchitect: Using Systemic Design to Create Options in a World of Wicked Problems",
+  school  = "School of Advanced Air and Space Studies, Air University",
+  year    = "2006",
+  type    = "",
+  address = "Maxwell Air Force Base, Alabama",
+  month   = "June",
+  note    = "available upon request",
+  annote  = ""
+}
+
+@misc{CSE-Survivability,
+title = {Cyber Survivability Endorsement (CSE) Implementation Guide},
+institution = {Armed Forces Communications and Electronics Association},
+year = {2023},	
+    note = {(Accessed on 22 Dec. 2025)},
+url = {https://www.esd.whs.mil/Portals/54/Documents/DD/issuances/dodd/302040p.pdf},
+note = {(Accessed on 22 Dec. 2025)}
+}
+
+
+
 
 @misc{DoD3020-40-MA,
 	title = {{DoD} {Directive} 3020.40 {Mission} {Assurance} ({MA})},
@@ -66,7 +90,7 @@
 	isbn = {978-0-9981331-8-8},
 	url = {https://hdl.handle.net/10125/109693},
     note = {(Accessed on 22 Dec. 2025)},
-	abstract = {Cyber-physical systems that are employed as part of a decision-making framework require a measure of behavior assurance to characterize their function. Further, such an assurance measure needs to accommodate both safety and security considerations in the design and implementation of such components. A key measure relevant to the emergence of data-driven and learning-enabled components is that of trustworthiness. Trustworthiness of a system is of paramount importance for all safety and security relevant systems, but of particular significance for autonomous systems operating without a human pilot or operator in the control-feedback loop. Further, emerging technologies such as data-driven ML and AI-based approaches that represent quantum jumps in tactical mission capabilities, demand a measure of confidence prior to their integration into existing decision frameworks. While we may be able to characterize an AI system’s capabilities by observing its behavior, we cannot understand its limitations and potential negative capabilities not obvious in the training data, opening up the possibility of unintended behaviors and thus a degree of unpredictability. We present a systems engineering methodology based on mission engineering coupled with system theoretic analysis, which provides a formal representation of system level security properties that can be mapped to lower level subsystem specifications and verified using conventional approaches. We address some of the underlying computing platform requirements necessary to ensure the successful implementation of safe, secure, trustworthy and resilient autonomous operations. This paper focuses on factors that impact trustworthiness, methods to estimate and assess it, design approaches that can integrate and support enhanced trustworthiness, as well as methods to verify and validate trustworthiness-relevant system requirements. Some relevant examples are provided in the context of an autonomous aircraft system and its relevant subsystems.},
+	abstract = {Cyber-physical systems that are employed as part of a decision-making framework require a measure of behavior assurance to characterize their function. Further, such an assurance measure needs to accommodate both safety and security considerations in the design and implementation of such components. A key measure relevant to the emergence of data-driven and learning-enabled components is that of trustworthiness. Trustworthiness of a system is of paramount importance for all safety and security relevant systems, but of particular significance for autonomous systems operating without a human pilot or operator in the control-feedback loop. Further, emerging technologies such as data-driven ML and AI-based approaches that represent quantum jumps in tactical mission capabilities, demand a measure of confidence prior to their integration into existing decision frameworks. While we may be able to characterize an AI system's capabilities by observing its behavior, we cannot understand its limitations and potential negative capabilities not obvious in the training data, opening up the possibility of unintended behaviors and thus a degree of unpredictability. We present a systems engineering methodology based on mission engineering coupled with system theoretic analysis, which provides a formal representation of system level security properties that can be mapped to lower level subsystem specifications and verified using conventional approaches. We address some of the underlying computing platform requirements necessary to ensure the successful implementation of safe, secure, trustworthy and resilient autonomous operations. This paper focuses on factors that impact trustworthiness, methods to estimate and assess it, design approaches that can integrate and support enhanced trustworthiness, as well as methods to verify and validate trustworthiness-relevant system requirements. Some relevant examples are provided in the context of an autonomous aircraft system and its relevant subsystems.},
 	language = {en},
 	urldate = {2025-02-05},
 	author = {Sarathy, Sriprakash and Chin, Shiu-Kai and Young, William and Wolf, Marilyn and Oh, J.-C. and Qiu, Qinru and Marquez, Marlon and Angiolini, R. and Mazzacane, Anthony},
@@ -79,7 +103,7 @@
 	title = {Certified {Security} by {Design} for the {Internet} of {Things}},
 	isbn = {978-1-119-19388-3},
 	url = {https://ieeexplore.ieee.org/document/7827484},
-	abstract = {Incorporating security into the design of components used in the Internet of Things (IoT) is essential for securing the operations of the IoT and the cyber‐physical infrastructure upon which society depends. To learn and draw inspiration from the past, this chapter looks at the 1970s and 1980s when the challenges of designing and implementing very large‐scale integrated (VLSI) circuits were encountered and overcome. The chapter defines the syntax, semantics, and inference rules for an access‐control logic used to reason about command and control (C2). Cryptographic operations are an integral part of protecting integrity and confidentiality. The chapter also provides algebraic models in higher‐order logic (HOL) theorem of idealized cryptographic operations. The chapter describes the objectives of certified security by design (CSBD), provides a simple motivating application as context, and states the critical requirements that must be satisfied to make CSBD a reality.},
+	abstract = {Incorporating security into the design of components used in the Internet of Things (IoT) is essential for securing the operations of the IoT and the cyber-physical infrastructure upon which society depends. To learn and draw inspiration from the past, this chapter looks at the 1970s and 1980s when the challenges of designing and implementing very large-scale integrated (VLSI) circuits were encountered and overcome. The chapter defines the syntax, semantics, and inference rules for an access-control logic used to reason about command and control (C2). Cryptographic operations are an integral part of protecting integrity and confidentiality. The chapter also provides algebraic models in higher-order logic (HOL) theorem of idealized cryptographic operations. The chapter describes the objectives of certified security by design (CSBD), provides a simple motivating application as context, and states the critical requirements that must be satisfied to make CSBD a reality.},
 	urldate = {2025-12-22},
 	booktitle = {Cyber-{Assurance} for the {Internet} of {Things}},
 	publisher = {IEEE},
@@ -99,7 +123,7 @@
 	issn = {2641-4554},
 	url = {https://cisse.info/journal/index.php/cisse/article/view/41},
     note = {(Accessed on 22 Dec. 2025)},
-	abstract = {Design for assurance of security, from the hardware level on up, is essential for securing the integrity of the smart cyber-physical infrastructure that is the Internet of Things. If the smart cyber-physical infrastructure fails to do the right things—that is, if it loses integrity because it is insecure and vulnerable—then untold social consequences will occur. For the security and integrity of cyber-physical systems to improve, not only must engineers and computer scientists possess the capability to design-in security from the very beginning, but they must do so in ways that enable people other than the designers to reproduce and check verification results easily and quickly. Designers and certifiers must formally describe and verify operations at high levels, such as the command-and-control (C2) protocols used by commanders and operators, down to the operations of applications and hardware. We call this design and verification capability for security and integrity certified security by design (CSBD). Our experience leads us to conclude that CSBD is feasible and practical for undergraduates. What makes CSBD feasible at the undergraduate level is similar to what made very large scale integrated (VLSI) circuit design feasible in the 1980s: (1) rigorous, simplified, and parameterized design and analytical methods spanning multiple levels of abstraction, and (2) computer-aided design and verification tools to mitigate complexity and problems of scale.},
+	abstract = {Design for assurance of security, from the hardware level on up, is essential for securing the integrity of the smart cyber-physical infrastructure that is the Internet of Things. If the smart cyber-physical infrastructure fails to do the right things, that is, if it loses integrity because it is insecure and vulnerable-then untold social consequences will occur. For the security and integrity of cyber-physical systems to improve, not only must engineers and computer scientists possess the capability to design-in security from the very beginning, but they must do so in ways that enable people other than the designers to reproduce and check verification results easily and quickly. Designers and certifiers must formally describe and verify operations at high levels, such as the command-and-control (C2) protocols used by commanders and operators, down to the operations of applications and hardware. We call this design and verification capability for security and integrity certified security by design (CSBD). Our experience leads us to conclude that CSBD is feasible and practical for undergraduates. What makes CSBD feasible at the undergraduate level is similar to what made very large scale integrated (VLSI) circuit design feasible in the 1980s: (1) rigorous, simplified, and parameterized design and analytical methods spanning multiple levels of abstraction, and (2) computer-aided design and verification tools to mitigate complexity and problems of scale.},
 	language = {en},
 	number = {1},
 	urldate = {2025-12-21},
@@ -746,11 +770,13 @@
   Year                     = {1998}
 }
 
-@Misc{JP5-0,
-  Title                    = {{JP 5-0}, {J}oint {O}peration {P}lanning},
-  Month                    = {1 December},
+@Misc{Mission-Engineering,
+  Title                    = {Mission {E}ngineering {G}uide},
+  Month                    = {October},
   Note                     = {US Dept of Defense},
-  Year                     = {2020}
+  Year                     = {2023},
+ url = {https://ac.cto.mil/wp-content/uploads/2023/11/MEG_2_Oct2023.pdf},
+ note = {(Accessed on 22 Dec. 2025)}}
 }
 
 @Article{OC12,
@@ -784,7 +810,7 @@
 
 @article{ISO15288,
     author    = {{International Organization for Standardization (ISO)} and {International Electrotechnical Commission (IEC)} and {Institute of Electrical and Electronics Engineers (IEEE)}},
-	title = {{ISO}/{IEC}/{IEEE} {International} {Standard} - {Systems} and software engineering–{System} life cycle processes},
+	title = {{ISO}/{IEC}/{IEEE} {International} {Standard} - {Systems} and software engineering---{System} life cycle processes},
 	doi = {10.1109/IEEESTD.2023.10123367},
 	abstract = {This document establishes a common framework of process descriptions for describing the life cycle of systems created by humans, defining a set of processes and associated terminology from an engineering viewpoint. These processes can be applied to systems of interest, their system elements, and to system of systems. Selected sets of these processes can be applied throughout the stages of a system's life cycle. This is accomplished through the involvement of stakeholders, with the ultimate goal of achieving customer satisfaction.},
 	urldate = {2025-06-27},
@@ -800,7 +826,25 @@
   title = 	 {JP 5-0: Joint Planning},
   organization = {US Department of Defense},
   month =	 {June},
-  year =	 2017}
+  year =	 2017,
+  url = {https://www.airforcespecialtactics.af.mil/Portals/80/prototype/assets/joint-pub-jpub-5-0-joint-planning.pdf},
+    note = {(Accessed on 22 Dec. 2025)}}
+  
+  @Manual{CJCSM,
+  title = 	 {Joint Risk Analysis Methodology, Chairman of the Joint Chiefs of Staff Manual},
+  organization = {US Department of Defense},
+  month =	 {December},
+  year =	 2023,
+  	url = {https://www.jcs.mil/Portals/36/Documents/Library/Manuals/CJCSM%203105.01B.pdf},
+    note = {(Accessed on 22 Dec. 2025)}}
+  
+  @Manual{Joint-3-0,
+  title = 	 {JP 3-0: Joint Campaigns and Operations},
+  organization = {US Department of Defense},
+  month =	 {June},
+  year =	 2022,
+  	url = {https://www.scribd.com/document/648027698/JP-3-0-June-2022-1},
+    note = {(Accessed on 22 Dec. 2025)}}
 
 @InProceedings{ACSAC13,
   author = 	 {William Young and Nancy Leveson},
