--- a/chapter6_references.bib
+++ b/chapter6_references.bib
@@ -64,8 +64,8 @@
   pages={n71},
   year={2021},
   month={March},
-  doi={10.1136/bmj.n71}
-}
+  doi={10.1136/bmj.n71}}
+
 
 @article{sahoo2024systematic,
   title={A systematic survey of prompt engineering in large language models: Techniques and applications},
@@ -77,7 +77,7 @@
 
 @article{luo2024potential,
   title={Potential Roles of Large Language Models in the Production of Systematic Reviews and Meta-Analyses},
-  author={Luo, Xinyu and Chen, Fang and Zhu, Danyang and Wang, Lei and Wang, Zijun and Liu, Hui and Lyu, Mingxuan and Wang, Yichen and Wang, Qian and Chen, Yujun},
+  author={Luo, Xinyu and et al},
   journal={Journal of Medical Internet Research},
   volume={26},
   pages={e56780},
