--- a/combining-nist-framewoork.tex
+++ b/combining-nist-framewoork.tex
@@ -15,8 +15,8 @@ This section explains how four complementary NIST frameworks form the backbone o
 \hline
 \textbf{Framework} & \textbf{Role in Ecosystem} & \textbf{Primary Focus} & \textbf{Organizational Level} \\ \hline
 SP 800-39 & Strategic Foundation & Organization-wide risk management strategy & All 3 Tiers (Org $\rightarrow$ Mission $\rightarrow$ System) \\ \hline
-SP 800-160v1 & Engineering Implementation & Build security into systems & Tier 3 (System) + informs Tier 1--2 \\ \hline
-SP 800-37 & Operational Risk Management & Authorize and manage system risks & Tier 3 (System) + reports to Tier 1--2 \\ \hline
+SP 800-160v1 & Engineering Implementation & Build security into systems & Tier 3 (System) + informs Tier 1---2 \\ \hline
+SP 800-37 & Operational Risk Management & Authorize and manage system risks & Tier 3 (System) + reports to Tier 1---2 \\ \hline
 AI RMF 1.0 & AI Risk Specialization & AI-specific risks and trustworthiness & Cross-cutting all tiers \\ \hline
 \end{tabular}
 \caption{The Four-Framework Ecosystem for AI Risk Management}
@@ -128,15 +128,15 @@ This section introduces the seven core characteristics of trustworthy AI systems
 \noindent\underline{\textbf{Safe}}: AI systems operate without causing unacceptable harm to people, property, or the environment, with appropriate safeguards to prevent dangerous failures. Key considerations include identifying potential failure modes and their consequences, establishing human oversight and intervention mechanisms for high-stakes decisions, ensuring graceful degradation rather than catastrophic failure, and maintaining alignment with human values and ethical principles. Engineering approaches to safety include conducting formal safety analysis and hazard identification, implementing fail-safe mechanisms and emergency stop capabilities, designing human-in-the-loop or human-on-the-loop architectures for critical decisions, and performing extensive scenario testing including adversarial conditions.
 \textbf{Safe}: AI systems operate without causing unacceptable harm to people, property, or the environment, with appropriate safeguards to prevent dangerous failures. Key considerations include identifying potential failure modes and their consequences, establishing human oversight and intervention mechanisms for high-stakes decisions, ensuring graceful degradation rather than catastrophic failure, and maintaining alignment with human values and ethical principles. Engineering approaches to safety include conducting formal safety analysis and hazard identification, implementing fail-safe mechanisms and emergency stop capabilities, designing human-in-the-loop or human-on-the-loop architectures for critical decisions, and performing extensive scenario testing including adversarial conditions.
 
-\noindent\textbf{Example -- Civilian:} An autonomous vehicle AI must not only navigate successfully but also include multiple redundant safety systems, human override capabilities, and the ability to safely stop when uncertain.
+\noindent\textbf{Example --- Civilian:} An autonomous vehicle AI must not only navigate successfully but also include multiple redundant safety systems, human override capabilities, and the ability to safely stop when uncertain.
 
-\noindent\textbf{Example -- Military (MQ-99):} An MQ-99 target identification AI must include multiple layers of verification before classification, mandatory human authorization for target engagement decisions, confidence thresholds that trigger escalation to human operators, and fail-safe protocols that default to ``do not engage'' when facing ambiguous situations. The system must maintain situational awareness of civilian presence and protected structures, with absolute prohibition on autonomous engagement when civilians are detected within the engagement zone.\\
+\noindent\textbf{Example --- Military (MQ-99):} An MQ-99 target identification AI must include multiple layers of verification before classification, mandatory human authorization for target engagement decisions, confidence thresholds that trigger escalation to human operators, and fail-safe protocols that default to ``do not engage'' when facing ambiguous situations. The system must maintain situational awareness of civilian presence and protected structures, with absolute prohibition on autonomous engagement when civilians are detected within the engagement zone.\\
 
 \noindent\underline{\textbf{Secure and Resilient}}: AI systems are protected against deliberate attacks, maintain functionality under adverse conditions, and recover gracefully from failures. Key considerations include protection against adversarial attacks such as model extraction, poisoning, and evasion, maintaining robustness to input perturbations and distribution shifts, ensuring resilience against system-level attacks on infrastructure, and establishing recovery capabilities and backup systems. Engineering approaches to security and resilience include adversarial training and robustness testing, input validation and sanitization, model watermarking and integrity verification, implementing defense-in-depth security architecture, and conducting continuous vulnerability assessment.
 
-\noindent\textbf{Example -- Civilian:} A fraud detection AI must maintain effectiveness even when adversaries deliberately craft transactions to evade detection, while also protecting the model itself from theft or manipulation.
+\noindent\textbf{Example --- Civilian:} A fraud detection AI must maintain effectiveness even when adversaries deliberately craft transactions to evade detection, while also protecting the model itself from theft or manipulation.
 
-\noindent\textbf{Example -- Military (MQ-99):} An MQ-99 reconnaissance AI must maintain accurate target identification even when adversaries employ deception techniques such as camouflage, decoys, or spoofing. It must protect against adversarial inputs designed to cause misclassification, defend the model and training data against extraction or poisoning attacks, maintain resilience to GPS jamming and communications disruption, and continue operating effectively in degraded conditions while clearly indicating reduced confidence levels to operators.\\
+\noindent\textbf{Example --- Military (MQ-99):} An MQ-99 reconnaissance AI must maintain accurate target identification even when adversaries employ deception techniques such as camouflage, decoys, or spoofing. It must protect against adversarial inputs designed to cause misclassification, defend the model and training data against extraction or poisoning attacks, maintain resilience to GPS jamming and communications disruption, and continue operating effectively in degraded conditions while clearly indicating reduced confidence levels to operators.\\
 
 \noindent\underline{\textbf{Accountable and Transparent}}: AI systems have clear accountability structures, maintain comprehensive audit trails, and operate with appropriate transparency about their functioning. Key considerations include establishing clear roles and responsibilities for AI system decisions, maintaining comprehensive logging of system behavior and decisions, ensuring traceability from outputs back to inputs and model logic, and providing appropriate disclosure about AI involvement in decisions. Engineering approaches to accountability and transparency include implementing comprehensive audit logging and monitoring, maintaining version control for models, data, and configurations, creating clear documentation of decision-making processes, and providing stakeholder notification about AI system involvement.
 
@@ -144,9 +144,9 @@ This section introduces the seven core characteristics of trustworthy AI systems
 
 \noindent\underline{\textbf{Explainable and Interpretable}}: AI systems provide understandable explanations of their decisions appropriate to stakeholder needs and expertise levels. Key considerations include tailoring explanation levels to different stakeholders (technical versus non-technical audiences), balancing model complexity with interpretability requirements, distinguishing between local explanations for individual decisions and global explanations of overall behavior, and validating that explanations accurately reflect actual model reasoning. Engineering approaches to explainability and interpretability include using inherently interpretable model architectures where feasible, applying post-hoc explanation methods such as LIME, SHAP, or attention mechanisms, generating natural language explanations, and conducting user testing to verify explanation comprehension.
 
-\noindent\textbf{Example -- Civilian:} A hiring AI must provide recruiters with understandable explanations of why candidates were recommended or rejected, using language meaningful to HR professionals rather than technical jargon.
+\noindent\textbf{Example --- Civilian:} A hiring AI must provide recruiters with understandable explanations of why candidates were recommended or rejected, using language meaningful to HR professionals rather than technical jargon.
 
-\noindent\textbf{Example -- Military (MQ-99):} An MQ-99 target identification AI must provide operators with clear explanations of classification decisions, showing which visual features, movement patterns, thermal signatures, or contextual factors contributed to target identification. Explanations must be comprehensible to trained operators under time pressure and combat stress, include confidence levels for each contributing factor, highlight any anomalies or unusual patterns that affected the decision, and enable rapid verification against the operator's own visual assessment and mission context.\\
+\noindent\textbf{Example --- Military (MQ-99):} An MQ-99 target identification AI must provide operators with clear explanations of classification decisions, showing which visual features, movement patterns, thermal signatures, or contextual factors contributed to target identification. Explanations must be comprehensible to trained operators under time pressure and combat stress, include confidence levels for each contributing factor, highlight any anomalies or unusual patterns that affected the decision, and enable rapid verification against the operator's own visual assessment and mission context.\\
 
 \noindent\underline{\textbf{Privacy-Enhanced}}: AI systems protect sensitive information, comply with privacy regulations, and minimize data collection and retention. Key considerations include ensuring compliance with privacy regulations such as GDPR and CCPA, minimizing personal data collection and retention, protecting against privacy attacks like membership inference and reconstruction, and implementing appropriate consent and data handling procedures. Engineering approaches to privacy enhancement include implementing differential privacy mechanisms, using federated learning and privacy-preserving training techniques, applying data anonymization and de-identification methods, encrypting data at rest and in transit, and conducting regular privacy impact assessments.
 
@@ -178,9 +178,9 @@ The RMF provides a structured approach to managing AI system security and trustw
 
 The first step establishes the foundation by defining the AI system's impact level and risk context. This involves identifying the system's mission or business function and determining potential adverse impacts if the system is compromised, fails, or behaves improperly. Traditional security categorization based on confidentiality, integrity, and availability is extended to AI-specific dimensions including fairness, explainability, and safety impacts. Organizations must document the risk context and stakeholder trust needs, considering factors such as the impact of biased decisions on affected populations, consequences of erroneous AI outputs in operational contexts, potential for adversarial manipulation to cause harm, and acceptable levels of uncertainty and error rates.\\
 
-\noindent\textbf{Example -- Civilian Application:} A loan approval AI might be categorized as MODERATE impact for confidentiality (sensitive financial data), HIGH impact for integrity (incorrect decisions harm borrowers and institution), and MODERATE impact for availability (temporary outages acceptable but should be brief).\\
+\noindent\textbf{Example --- Civilian Application:} A loan approval AI might be categorized as MODERATE impact for confidentiality (sensitive financial data), HIGH impact for integrity (incorrect decisions harm borrowers and institution), and MODERATE impact for availability (temporary outages acceptable but should be brief).\\
 
-\noindent\textbf{Example -- Military Application (MQ-99):} An MQ-99 autonomous reconnaissance drone's target identification AI might be categorized as HIGH impact for confidentiality (revealing intelligence sources and methods), CRITICAL impact for integrity (incorrect target identification could result in civilian casualties or mission failure), and HIGH impact for availability (mission-critical intelligence gathering). AI-specific considerations include CRITICAL safety impact (erroneous target identification could cause loss of life), fairness considerations regarding potential bias in identifying targets from different regions or populations, and CRITICAL security impact (adversarial manipulation could cause fratricide or mission compromise).\\
+\noindent\textbf{Example --- Military Application (MQ-99):} An MQ-99 autonomous reconnaissance drone's target identification AI might be categorized as HIGH impact for confidentiality (revealing intelligence sources and methods), CRITICAL impact for integrity (incorrect target identification could result in civilian casualties or mission failure), and HIGH impact for availability (mission-critical intelligence gathering). AI-specific considerations include CRITICAL safety impact (erroneous target identification could cause loss of life), fairness considerations regarding potential bias in identifying targets from different regions or populations, and CRITICAL security impact (adversarial manipulation could cause fratricide or mission compromise).\\
 
 \noindent\underline{\textbf{Step 2: Select.}}
 
@@ -190,9 +190,9 @@ With the risk context established, organizations choose security and trustworthi
 
 Implementation translates selected controls into concrete technical reality using secure systems engineering principles from SP 800-160v1. Organizations apply systems security engineering processes throughout development, building security and trustworthiness into architecture and design rather than adding them afterward. Controls are implemented at appropriate levels including hardware, software, and operational procedures, with detailed documentation of implementation details and configuration settings. The engineering lifecycle integration ensures that security and trust requirements are treated as first-class concerns during early phases of requirements and architecture development, incorporated into detailed design specifications during the design phase, followed through secure coding and development practices during implementation, verified to work together coherently during integration, and tested for effectiveness before deployment.\\
 
-\noindent\textbf{Example -- Civilian:} For a fraud detection AI, implementation includes adversarial training during model development, input validation in the inference pipeline, comprehensive logging systems, bias testing infrastructure, and operational runbooks for responding to detected anomalies.\\
+\noindent\textbf{Example --- Civilian:} For a fraud detection AI, implementation includes adversarial training during model development, input validation in the inference pipeline, comprehensive logging systems, bias testing infrastructure, and operational runbooks for responding to detected anomalies.\\
 
-\noindent\textbf{Example -- Military (MQ-99):} For an MQ-99 target identification AI, implementation includes adversarial training against known deception techniques and camouflage patterns; multi-sensor fusion architecture combining visual, thermal, and radar data with weighted confidence scoring; hardware-based model integrity verification using TPM; encrypted storage of model parameters and training data; IFF (Identification Friend or Foe) system integration with mandatory cross-verification; comprehensive mission recording system capturing all sensor inputs and AI decisions with tamper-evident logging; operator override mechanisms with zero-latency response; fail-safe logic that defaults to ``uncertain'' classification and human escalation under ambiguous conditions; and red team testing against realistic adversarial scenarios.\\
+\noindent\textbf{Example --- Military (MQ-99):} For an MQ-99 target identification AI, implementation includes adversarial training against known deception techniques and camouflage patterns; multi-sensor fusion architecture combining visual, thermal, and radar data with weighted confidence scoring; hardware-based model integrity verification using TPM; encrypted storage of model parameters and training data; IFF (Identification Friend or Foe) system integration with mandatory cross-verification; comprehensive mission recording system capturing all sensor inputs and AI decisions with tamper-evident logging; operator override mechanisms with zero-latency response; fail-safe logic that defaults to ``uncertain'' classification and human escalation under ambiguous conditions; and red team testing against realistic adversarial scenarios.\\
 
 \noindent\underline{\textbf{Step 4: Assess.}}
 
@@ -307,7 +307,7 @@ Lateral feedback enables learning and consistency across similar organizational 
 
 \subsection{Trust Degradation Response: A Practical Example}
 
-To illustrate how multi-tier monitoring and feedback loops work in practice, consider a bias incident in a loan approval AI. In Week 1, Tier 3 automated monitoring detects bias increasing from 3\% to 6\% for one demographic group, generating an alert and triggering investigation. The technical team analyzes the root cause‚Äîa demographic shift in the applicant population‚Äîand determines that while bias exceeds mission tolerance (5\%), it remains within organizational maximum (10\%). The incident is documented and escalated to the Tier 2 mission owner.
+To illustrate how multi-tier monitoring and feedback loops work in practice, consider a bias incident in a loan approval AI. In Week 1, Tier 3 automated monitoring detects bias increasing from 3\% to 6\% for one demographic group, generating an alert and triggering an investigation. The technical team analyzes the root cause, a demographic shift in the applicant population, and determines that while bias exceeds mission tolerance (5\%), it remains within organizational maximum (10\%). The incident is documented and escalated to the Tier 2 mission owner.
 
 The mission owner evaluates operational impact and decides to continue operation with enhanced human review for the affected demographic while accelerating the audit schedule from weekly to daily during the mitigation period. A mitigation plan is required within 14 days, and the issue is escalated to Tier 1 for awareness. The AI Risk Executive at Tier 1 assesses the situation as within organizational tolerance but concerning, requests mitigation plan review and approval, evaluates whether similar issues affect other systems through lateral review, and documents the incident for policy review.
 
@@ -324,7 +324,7 @@ This section brings together all threads of the framework to present a unified u
 
 \subsection{Trust as an Emergent Property}
 
-Trust in AI systems emerges from the interaction of multiple components rather than existing in any single element. Individual components such as data, models, and infrastructure have measurable characteristics like accuracy, security, and reliability. These components interact to produce overall system behavior that may differ from what individual components would suggest in isolation. Different stakeholders—including users, mission owners, and executives—perceive and evaluate this system behavior through their own lenses and contexts. Trust arises when stakeholders believe the emergent system behavior will reliably serve their needs in their specific operational context.
+Trust in AI systems emerges from the interaction of multiple components rather than existing in any single element. Individual components such as data, models, and infrastructure have measurable characteristics like accuracy, security, and reliability. These components interact to produce overall system behavior that may differ from what individual components would suggest in isolation. Different stakeholders---including users, mission owners, and executives---perceive and evaluate this system behavior through their own lenses and contexts. Trust arises when stakeholders believe the emergent system behavior will reliably serve their needs in their specific operational context.
 
 This emergent nature of trust has profound implications for AI system development and deployment. Engineers cannot directly "build in" trust; they can only build in trustworthiness characteristics that enable trust to develop. Trust is inherently context-dependent, meaning the same system may be trusted in one context but not another. It is also stakeholder-specific, as different stakeholders may trust or distrust the same system for different reasons based on their unique needs and perspectives. Finally, trust is dynamic, evolving as system behavior, operational context, and stakeholder experience change over time. Understanding these properties is essential for managing AI trustworthiness effectively.
 
@@ -348,7 +348,7 @@ Organizations must balance competing demands among these characteristics, as the
 
 \subsection{Trust Through Continuous Process}
 
-Trust is not established once and assumed to persist—it requires continuous maintenance through ongoing verification, adaptation to change, and learning from experience. Ongoing verification includes continuous monitoring of trustworthiness characteristics, regular reassessment of control effectiveness, periodic reauthorization with updated evidence, and validation that trust remains appropriately calibrated. Adaptation to change ensures that system updates and enhancements trigger reassessment, changing operational contexts require validation, emerging threats necessitate control updates, and stakeholder feedback informs improvements. Learning and improvement mean that incidents provide lessons for enhancement, operational experience refines understanding, best practices evolve based on evidence, and organizational capabilities mature over time.
+Trust is not established once and assumed to persist---it requires continuous maintenance through ongoing verification, adaptation to change, and learning from experience. Ongoing verification includes continuous monitoring of trustworthiness characteristics, regular reassessment of control effectiveness, periodic reauthorization with updated evidence, and validation that trust remains appropriately calibrated. Adaptation to change ensures that system updates and enhancements trigger reassessment, changing operational contexts require validation, emerging threats necessitate control updates, and stakeholder feedback informs improvements. Learning and improvement mean that incidents provide lessons for enhancement, operational experience refines understanding, best practices evolve based on evidence, and organizational capabilities mature over time.
 
 \subsection{Critical Success Factors}
 
@@ -358,6 +358,6 @@ Evidence-based claims require that trust assertions be supported by objective ev
 
 \section{Conclusion: Trust Through Transparency, Evidence, and Continuous Vigilance}
 
-The integration of four NIST frameworks—SP 800-39, SP 800-160v1, SP 800-37, and AI RMF—creates a comprehensive, risk-based approach to building, verifying, and maintaining trust in AI systems. This integrated framework succeeds because it addresses all organizational levels in a coordinated way, covers the complete lifecycle from requirements through continuous operations, balances multiple dimensions of trustworthiness simultaneously, grounds trust in evidence rather than assumptions, enables continuous adaptation to changing threats and operational contexts, aligns with established risk management and systems engineering practices, and scales appropriately to different risk levels and mission criticality.
+The integration of four NIST frameworks---SP 800-39, SP 800-160v1, SP 800-37, and AI RMF---creates a comprehensive, risk-based approach to building, verifying, and maintaining trust in AI systems. This integrated framework succeeds because it addresses all organizational levels in a coordinated way, covers the complete lifecycle from requirements through continuous operations, balances multiple dimensions of trustworthiness simultaneously, grounds trust in evidence rather than assumptions, enables continuous adaptation to changing threats and operational contexts, aligns with established risk management and systems engineering practices, and scales appropriately to different risk levels and mission criticality.
 
-Organizations that adopt this comprehensive approach position themselves to deploy AI systems that stakeholders can appropriately trust—systems that are demonstrably valid, safe, secure, accountable, explainable, privacy-respecting, and fair. Trust is not automatic, it is not free, and it is not permanent. Trust is earned through transparency, maintained through evidence, and sustained through continuous vigilance. The NIST-aligned framework provides the roadmap for organizations committed to achieving and maintaining trustworthy AI systems.
+Organizations that adopt this comprehensive approach position themselves to deploy AI systems that stakeholders can appropriately trust---systems that are demonstrably valid, safe, secure, accountable, explainable, privacy-respecting, and fair. Trust is not automatic, it is not free, and it is not permanent. Trust is earned through transparency, maintained through evidence, and sustained through continuous vigilance. The NIST-aligned framework provides the roadmap for organizations committed to achieving and maintaining trustworthy AI systems.
