--- a/evaluating-llms.tex
+++ b/evaluating-llms.tex
@@ -16,7 +16,7 @@
 %         \item Others on aitopics.org?
 %     \end{itemize}
 %     \item We will save all papers and PDFs and links in a big repository in case NSA staff need our help validating a reference later (Tyson mentioned this)
-%     \item The LLM only processes the abstracts/executive summaries, which are the authors’ own summaries of their work (or at least, we compare abstract-only LLM categorizations with full-paper categorizations)
+%     \item The LLM only processes the abstracts/executive summaries, which are the authors own summaries of their work (or at least, we compare abstract-only LLM categorizations with full-paper categorizations)
 %     \item The LLM only categorizes the papers into our pre-defined categories (entries in the ISO matrix), it does not summarize them
 % \end{itemize}
 
@@ -90,12 +90,12 @@ The following questions are designed to guide the investigator / AI in categoriz
     \item How the organization will measure ROI for AI
 \end{itemize}
 
-\textbf{Level 2: Mission / Business Process Level: }Does the document address governance in combination with aspects of mapping and/or measuring, how the approach will be implemented in the organization beyond the technical details of the AI components? Look for content related to:
+\textbf{Level 2: Mission / Business Process Level: }Does the document address governance in combination with aspects of mapping and/or measuring, and how the approach will be implemented in the organization beyond the technical details of the AI components? Look for content related to:
 
 \begin{itemize}
     \item Implementation strategies and operational procedures beyond the AI
     \item How will humans interact with the AI
-    \item What decisions should be made by humans and what decisions should be made by the AI
+    \item What decisions should be made by humans, and what decisions should be made by the AI
     \item Policy frameworks and standard operating procedures
     \item Workflow processes and operational guidelines
     \item Training and awareness programs
@@ -103,7 +103,7 @@ The following questions are designed to guide the investigator / AI in categoriz
     \item Performance monitoring and evaluation processes
 \end{itemize}
 
-\textbf{Level 3: System Level:} Does the document address to map, measure and manage a specific AI system? How or what tools will be used to secure AI? Look for content related to:
+\textbf{Level 3: System Level:} Does the document address to map, measure, and manage a specific AI system? How or what tools will be used to secure AI? Look for content related to:
 
 \begin{itemize}
     \item Technical security solutions and software tools
@@ -114,10 +114,10 @@ The following questions are designed to guide the investigator / AI in categoriz
     \item Specific technologies, platforms, or technical standards
     \item Measures of performance
 \end{itemize}
-Once the categorization of the levels have been identified the following questions must be asked to assess what part or parts of the systems engineering lifecycle the document addresses:
+Once the categorization of the levels has been identified, the following questions must be asked to assess what part or parts of the systems engineering lifecycle the document addresses:
 
 \begin{enumerate}
-    \item \textbf{Business and Mission Analysis}: Does the document describe how choices will be made?  Does the document provide guidance for selecting which projects might be most suitable for AI? Does the document suggest a hypothesis for generating and measuring the ROI for the AI project?  Does the document prescribe a business or mission problem the AI is expected to address? Does the document outline success criteria for the AI initiative?
+    \item \textbf{Business and Mission Analysis}: Does the document describe how choices will be made? Does the document provide guidance for selecting which projects might be most suitable for AI? Does the document suggest a hypothesis for generating and measuring the ROI for the AI project? Does the document prescribe a business or mission problem the AI is expected to address? Does the document outline success criteria for the AI initiative?
     \item \textbf{Stakeholder Needs and Requirements Definition:} Does the document describe how to identify stakeholders and their security needs? Does it provide methods for gathering and defining protection requirements from different stakeholder perspectives?
     \item \textbf{System Requirements Definition:} Does the document explain how to convert stakeholder needs into measurable security requirements? Does it address how to define security performance metrics and verification criteria?
     \item \textbf{Architecture Definition:} Does the document provide guidance on developing security architectures? Does it address how to identify and integrate security-enabling systems and components?
