--- a/execSummary.tex
+++ b/execSummary.tex
@@ -10,7 +10,7 @@
 %       \item This definition is consistent with the following standards
 %         \begin{itemize}
 %           \item NIST SP 800-160v1r1, Engineering Secure Trustworthy Systems, \cite{NIST800-160}
-%           \item ISO/IEC/IEEE 15288, Systems and software engineering — System life cycle processes, \cite{ISO15288}
+%           \item ISO/IEC/IEEE 15288, Systems and software engineering System life cycle processes, \cite{ISO15288}
 %         \end{itemize}
 %     \end{itemize}
 %   \end{minipage}%
@@ -29,9 +29,9 @@
 
 %Figure~\ref{fig:heatmap} illustrates this distribution across organizational levels and lifecycle contexts, revealing extreme concentration in technical implementation with negligible research addressing foundational requirements for deployment.
 
-\noindent\textbf{The Problem: Building Solutions Before Defining Problems.} The field builds technical solutions before establishing mission context, governance frameworks, and validation methods necessary for trustworthy systems. This contradicts NIST SP 800-160, which explicitly states that trustworthiness begins with stakeholder needs and protection requirements carried throughout the lifecycle. Less than 3\% of the research addresses Business and Mission Analysis or definition of stakeholder needs and requirements, the phases where purpose, constraints, and success criteria should be established. With virtually no research at the Organizational Level (Tier 1), commanders lack frameworks for chain-of-command accountability, doctrine integration, or coordinating AI across joint operations. Only 2--3\% of the work examines operational workflows, Rules of Engagement, or tactical procedures. Sparse research on verification (802 papers) and validation (276 papers) provides insufficient methods for proving that systems meet trustworthiness objectives in operational settings.\\
+\noindent\textbf{The Problem: Building Solutions Before Defining Problems.} The field builds technical solutions before establishing mission context, governance frameworks, and validation methods necessary for trustworthy systems. This contradicts NIST SP 800-160, which explicitly states that trustworthiness begins with stakeholder needs and protection requirements carried throughout the lifecycle. Less than 3\% of the research addresses Business and Mission Analysis or definition of stakeholder needs and requirements, the phases where purpose, constraints, and success criteria should be established. With virtually no research at the Organizational Level (Tier 1), commanders lack frameworks for chain-of-command accountability, doctrine integration, or coordinating AI across joint operations. Only 2---3\% of the work examines operational workflows, Rules of Engagement, or tactical procedures. Sparse research on verification (802 papers) and validation (276 papers) provides insufficient methods for proving that systems meet trustworthiness objectives in operational settings.\\
 
-\noindent\textbf{Why This Matters.} Solution-first thinking produces suboptimal tools without rigorously defining the problems they should solve. Industry data shows that 95\% of custom enterprise AI solutions fail to reach production due to brittle workflows, lack of context, and poor alignment with operational needs--the same issues plaguing national security applications.
+\noindent\textbf{Why This Matters.} Solution-first thinking produces suboptimal tools without rigorously defining the problems they should solve. Industry data shows that 95\% of custom enterprise AI solutions fail to reach production due to brittle workflows, lack of context, and poor alignment with operational needs---the same issues plaguing national security applications.
 
 This creates a threefold risk: \textbf{the governance risk} from unclear accountability in AI-assisted decisions; \textbf{operational risk} when poorly integrated AI disrupts processes during time-critical missions; and \textbf{performance risk} when laboratory-validated systems fail under operational stress. A technically perfect AI targeting system provides no value if commanders lack authorization frameworks, operators lack integration procedures, or testers lack validation methods for adaptive adversaries.\\
 
