--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,4 @@
+% NIST Standards and Frameworks
 @techreport{nist_sp800_37,
   author = {Joint Task Force},
   title = {Risk Management Framework for Information Systems and Organizations: A System Life Cycle Approach for Security and Privacy},
@@ -20,7 +21,7 @@
 
 @techreport{nist_ai_rmf_2023,
   author = {{National Institute of Standards and Technology}},
-  title = {Artificial Intelligence Risk Management Framework (AI RMF 1.0)},
+  title = {{A}rtificial {I}ntelligence {R}isk {M}anagement {F}ramework ({AI} {RMF} 1.0)},
   institution = {U.S. Department of Commerce},
   year = {2023},
   number = {NIST AI 100-1},
@@ -134,7 +135,7 @@
 
 @article{amodei2016concrete,
   author = {Amodei, Dario and Olah, Chris and Steinhardt, Jacob and Christiano, Paul and Schulman, John and Man{\'e}, Dan},
-  title = {Concrete Problems in AI Safety},
+  title = {Concrete Problems in {AI} Safety},
   journal = {arXiv preprint arXiv:1606.06565},
   year = {2016},
   url = {https://arxiv.org/abs/1606.06565},
@@ -238,9 +239,9 @@
 }
 
 @article{feinstein1990high,
-  title={High agreement but low kappa: I. The problems of two paradoxes},
+  title={High agreement but low {K}appa: I. The problems of two paradoxes},
   author={Feinstein, Alvan R and Cicchetti, Domenic V},
-  journal={Journal of clinical epidemiology},
+  journal={Journal of {C}linical {E}pidemiology},
   volume={43},
   number={6},
   pages={543--549},
@@ -256,7 +257,7 @@
   journal={Acta Radiologica},
   pages={675-683},
   year={2025},
-  publisher={SAGE Publications Sage UK: London, England},
+  publisher={{SAGE} {P}ublications {S}age {UK}: London, England},
   url = {https://journals.sagepub.com/doi/10.1177/02841851251319666},
   note ={(Accessed on 22 Dec. 2025)}
 }
@@ -308,7 +309,7 @@
 }
 
 @article{cai_workload_reduction,
-  title = {{Assessing the Performance of ChatGPT in Answering Questions About Circular Economy}},
+  title = {{Assessing the Performance of {C}hat{GPT} in Answering Questions About Circular Economy}},
   author = {Cai, Meng and Luo, Yuxuan and Yang, Steven and Ding, Wei and Wang, Shaowen},
   journal = {Sustainability},
   year = {2023},
@@ -391,7 +392,7 @@
 
 % AI Trustworthiness and Security
 @techreport{dod_ai_ethics,
-  title       = {{DoD Artificial Intelligence Ethics Principles}},
+  title       = {{Implementing Responsible Artificial Intelligence in the Department of Defense}},
   author      = {{Department of Defense}},
   institution = {U.S. Department of Defense},
   year        = {2021},
@@ -415,7 +416,7 @@
 
 
 @misc{ai_alignment,
-      title={AI Alignment: A Comprehensive Survey}, 
+      title={{AI} {A}lignment: {A} {C}omprehensive {S}urvey}, 
       author={Jiaming Ji and Tianyi Qiu and Boyuan Chen and Borong Zhang and Hantao Lou and Kaile Wang and Yawen Duan and Zhonghao He and Lukas Vierling and Donghai Hong and Jiayi Zhou and Zhaowei Zhang and Fanzhi Zeng and Juntao Dai and Xuehai Pan and Kwan Yee Ng and Aidan O'Gara and Hua Xu and Brian Tse and Jie Fu and Stephen McAleer and Yaodong Yang and Yizhou Wang and Song-Chun Zhu and Yike Guo and Wen Gao},
       year={2025},
       eprint={2310.19852},
